--- a/assets/scss/partials/_layout.scss
+++ b/assets/scss/partials/_layout.scss
@@ -29,7 +29,9 @@ body {
 	font-size:16px;
 	z-index: 9;
 	transition: all 0.5s ease-in;
-	transform: translate3d(0, 0, 0);
+	// it seems baguette.js has some problems with this
+	// and positioning the container correctly with "fixed
+	//transform: translate3d(0, 0, 0);
 
 	&.chrico-navigation--is-visible {
 	  transform: translate3d(250px, 0, 0); // moving the left container 250px to the left
