--- a/assets/scss/partials/_typography.scss
+++ b/assets/scss/partials/_typography.scss
@@ -40,7 +40,8 @@ h6 {
 h1 {
   font-size: 225%;
   font-weight: 400;
-  word-break: break-all;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 h2,
